# kizu

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.ja.md  README.md  justfile
.claude/: settings.json
.codex/: hooks.json
.github/workflows/: ci.yml  demo-refresh.yml  release.yml
benches/: operations.rs
docs/: README.md  SPEC.md  claude-code-hooks.md  deep-research-agent-hook-config-paths.md  deep-research-ai-agent-hooks.md  inline-scar-pattern.md  related-tools.md
docs/adr/: 0001-git-cli-shell-out.md  0002-notify-debouncer-full.md  0003-tokio-async-runtime.md  0004-tuistory-e2e.md  0005-watcher-coalescing-no-ignore-filter.md  0006-scroll-with-popup-picker.md  0007-visual-row-scroll-and-session-scoped-watcher.md  0008-dynamic-watcher-and-health-split.md  0009-visual-cursor-position.md  0010-macos-poll-fallback-and-targeted-git-watch-roots.md  0011-common-git-root-watch-for-late-packed-refs.md  0012-worktree-content-compare-on-macos-poll.md  0013-source-aware-watcher-health.md  0014-delta-style-background-diff.md  0015-exclude-build-output-from-worktree-watch.md  0016-stream-mode-per-operation-diff.md  0017-per-project-events-dir.md  0018-attach-terminal-split.md  0019-custom-prompt-for-init.md  0020-tree-sitter-for-jsx-tsx.md  README.md  template.md
docs/media/: demo.tape
plans/: app-ui-responsibility-refactor.md  init-custom-prompt.md  jsx-tsx-complete-support.md  large-scale-refactor.md  performance-benchmark-suite.md  v0.1-mvp.md  v0.2.md  v0.3.2.md  v0.3.md  v0.4-search-highlight.md  v0.4.md  v0.5-line-numbers.md  v0.5-newline-marker.md  v0.5-responsive-footer.md
plugin/: README.md  plugin.json
plugin/commands/: kizu.md
scripts/: test-stream-mode.sh
scripts/demo/: fake-agent.sh
src/: app.rs  attach.rs  config.rs  git.rs  highlight.rs  hook.rs  init.rs  language.rs  lib.rs  main.rs  paths.rs  perf.rs  prompt.rs  scar.rs  session.rs  stream.rs  test_support.rs  ui.rs  watcher.rs
src/app/: file_view.rs  input.rs  layout.rs  navigation.rs  picker.rs  review.rs  runtime.rs  search.rs  stream_events.rs  text_input.rs
src/git/: diff.rs  parse.rs  path.rs  repo.rs  revert.rs  types.rs  untracked.rs
src/hook/: event_log.rs  input.rs  output.rs  scan.rs  session_files.rs  tests.rs  types.rs
src/init/: detect.rs  install.rs  pre_commit.rs  settings_json.rs  teardown.rs  tests.rs  types.rs
src/language/: js_ts.rs
src/ui/: diff_line.rs  diff_view.rs  empty_state.rs  file_view.rs  footer.rs  frame.rs  geometry.rs  input_line.rs  line_numbers.rs  overlays.rs  tests.rs  text_cells.rs
src/watcher/: backend.rs  event_log.rs  git_state.rs  matcher.rs  tests.rs  worktree.rs
tests/e2e/: colors.test.ts  helpers.ts  init.test.ts  jsx-tsx.test.ts  navigation.test.ts  package.json  reactive.test.ts  reset.test.ts  scar.test.ts  smoke.test.ts  stream.test.ts  tsconfig.json
