[package]
name = "kizu"
version = "0.1.0"
edition = "2024"
description = "Realtime diff monitor + inline scar review TUI for AI coding agents (Claude Code, etc.)"
license = "MIT"
repository = "https://github.com/annenpolka/kizu"
keywords = ["claude-code", "ai-agent", "diff", "tui", "review"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
notify = "8.2.0"
notify-debouncer-full = "0.7.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
syntect = "5.3.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
