[package]
name = "kizu"
version = "0.7.0"
edition = "2024"
description = "Realtime diff monitor + inline scar review TUI for AI coding agents (Claude Code, etc.)"
license = "MIT"
repository = "https://github.com/annenpolka/kizu"
keywords = ["claude-code", "ai-agent", "diff", "tui", "review"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
libc = "0.2"
notify = "8.2.0"
notify-debouncer-full = "0.7.0"
ratatui = "0.30.0"
regex = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
syntect = "5.3.0"
tokio = { version = "1.52", features = ["rt", "macros", "sync", "time"] }
toml = "1.1.2"
tree-sitter = "0.26.8"
tree-sitter-highlight = "0.26.8"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
unicode-width = "0.2"
which = "8"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "operations"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
